<resources>
    <string name="app_name">DemoFFMPEG</string>
    <string name="string_inspiratif">Inspiratif</string>
    <string name="string_kelakuan">Kelakuan</string>
    <string name="string_ohgitu">Oh Gitu!</string>
    <string name="string_bangga">Bangga</string>
    <string name="string_semesta">Semesta</string>
    <string name="string_kisah">Kisah</string>
    <string name="string_aha">Aha!</string>
    <string name="string_politik">Politik</string>
    <string name="image">image</string>
    <string name="_1menit">1MENIT</string>
    <string name="publish_text">Are you sure you want to publish the slideshow?</string>
    <string name="publish_yes">YES, publish it</string>
    <string name="cancel">Cancel</string>
    <string name="enter_passcode">Enter PassCode</string>
    <string name="publish_string">Sit back and relax for a few minutes while we\'re publishing the slideshow...</string>


    <string name="awed">All We Ever Do</string>
    <string name="ca">Chasing Anonymous</string>
    <string name="hiasom">Happy Is A State Of Mind</string>
    <string name="jr">Jump Rope</string>
    <string name="jb">Just Breath</string>
    <string name="lil">Lost In Love</string>
    <string name="tms">Too Much Sugar</string>
</resources>
