<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_opa_85">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/publish_text"
            android:textColor="@color/white"
            android:textSize="30sp" />


        <android.support.v7.widget.CardView
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:elevation="4dp"
            app:cardBackgroundColor="@color/teal_300"
            app:cardCornerRadius="20dp">

            <TextView
                android:text="@string/publish_yes"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <FrameLayout
                android:id="@+id/card_publish"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:selectableItemBackground" />


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:elevation="4dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp">

            <TextView
                android:text="@string/cancel"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/dark_blue_opini"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <FrameLayout
                android:id="@+id/card_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:selectableItemBackground" />


        </android.support.v7.widget.CardView>


    </LinearLayout>

</FrameLayout>